src/ui/snapshots/blackjack__ui__chip__tests__a_hundred_dollar_chip_is_three_digits_wide.snap
---
source: src/ui/chip.rs
expression: "render(Chip::new(DENOMINATIONS[1]), CHIP_WIDTH, CHIP_HEIGHT)"
---
" ▄▄▄ "
" 100 "
" ▀▀▀ "
