src/ui/snapshots/blackjack__ui__chip__tests__a_large_wager_stacks_rather_than_sprawls.snap
---
source: src/ui/chip.rs
expression: "render(BettingSpot::new(4999, true), 74, SPOT_HEIGHT)"
---
"              ╱▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔$4999▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔╲              "
"             ╱  ▄▄▄      ▄▄▄      ▄▄▄      ▄▄▄      ▄▄▄     ╲             "
"            ▕   500  ×9  100  ×4  25   ×3   5   ×4   1   ×4  ▏            "
"             ╲  ▀▀▀      ▀▀▀      ▀▀▀      ▀▀▀      ▀▀▀     ╱             "
"              ╲▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁╱              "
