src/ui/snapshots/blackjack__ui__chip__tests__a_single_chip.snap
---
source: src/ui/chip.rs
expression: "render(Chip::new(DENOMINATIONS[2]), CHIP_WIDTH, CHIP_HEIGHT)"
---
" ▄▄▄ "
" 25  "
" ▀▀▀ "
