src/ui/snapshots/blackjack__ui__chip__tests__bare_chips_when_there_is_no_room_for_the_outline.snap
---
source: src/ui/chip.rs
expression: "render(BettingSpot::new(135, false), 40, CHIP_HEIGHT)"
---
"           ▄▄▄   ▄▄▄   ▄▄▄              "
"           100   25     5   ×2          "
"           ▀▀▀   ▀▀▀   ▀▀▀              "
