src/ui/snapshots/blackjack__ui__chip__tests__betting_spot_with_a_mixed_stack.snap
---
source: src/ui/chip.rs
expression: "render(BettingSpot::new(135, true), 40, SPOT_HEIGHT)"
---
"         ╱▔▔▔▔▔▔▔▔$135▔▔▔▔▔▔▔▔╲         "
"        ╱  ▄▄▄   ▄▄▄   ▄▄▄     ╲        "
"       ▕   100   25     5   ×2  ▏       "
"        ╲  ▀▀▀   ▀▀▀   ▀▀▀     ╱        "
"         ╲▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁╱         "
