src/ui/snapshots/blackjack__ui__chip__tests__betting_spot_with_one_chip.snap
---
source: src/ui/chip.rs
expression: "render(BettingSpot::new(25, true), 30, SPOT_HEIGHT)"
---
"           ╱▔$25▔╲            "
"          ╱  ▄▄▄  ╲           "
"         ▕   25    ▏          "
"          ╲  ▀▀▀  ╱           "
"           ╲▁▁▁▁▁╱            "
